tests/neg/rec-type.jo
type A = A
type B = B
type C = {a: A, c: C}
type D = {a: A, c: D}

type X = Y
type Y = X

def test1(a: A): A = a.x // error

def test2(x: X): Unit = x.a // error

def test3(a: A): Int = a  // error

def test4(a: Int): A = a // error

def test5(a: A): B = a   // error

def test6(x: X): Y = x   // error


def main = println 10
